# OTAku

./: --timeout  .gitignore  LICENSE  README.md  build_job.json  build_log.json  worklog.md
.github/workflows/: build-aarch64.yml  build.yml  release-aarch64.yml  release.yml  smoke-test.yml
android/: build.gradle.kts  settings.gradle.kts
android/app/: build.gradle  build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/hoshiyomi/otaku/: MainActivity.kt  NativeBridge.kt  OTABridge.kt  OTAkuApp.kt  PyBridge.kt  PythonBridge.kt  SuiseiColors.kt
android/app/src/main/java/com/hoshiyomi/otaku/data/: BackupAgent.kt
android/app/src/main/java/com/hoshiyomi/otaku/service/: OTAService.kt
android/app/src/main/java/com/hoshiyomi/payloadtoolkit/: MainActivity.kt  PayloadBridge.kt  PyBridge.kt  PythonBridge.kt
android/app/src/main/java/com/hoshiyomi/payloadtoolkit/service/: PayloadService.kt
android/app/src/main/res/drawable/: ic_auto_detect.xml  ic_close.xml  ic_collapse_log.xml  ic_expand_log.xml  ic_launcher_foreground.xml  ic_theme_auto.xml  ic_theme_auto_dark.xml  ic_theme_auto_light.xml  ic_theme_dark.xml  ic_theme_light.xml  splash_branding.xml
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/menu/: settings_menu.xml  toolbar_menu.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/main/res/values-night/: colors.xml  themes.xml
android/app/src/main/res/values-v31/: themes.xml
android/app/src/main/res/xml/: file_paths.xml
docs/: ARCHITECTURE.md
extracted2/data/data/com.termux/files/usr/include/python3.13/: pyconfig.h
rust/: Cargo.toml  build.rs
rust/proto/: update_metadata.proto
rust/src/: compression.rs  dd.rs  lib.rs  payload.rs  proto.rs
scripts/: build_pyz.py  prepare_python_runtime.sh  validate_elf.py
scripts/jni/: pybridge.c
src/otaku/: __init__.py
src/otaku/modes/: __init__.py  dd.py
src/payload_toolkit/: __init__.py  compression.py
src/payload_toolkit/modes/: dd.py
termux-inspect/: openssl.deb
termux-inspect/ossl/data/data/com.termux/files/usr/include/openssl/: configuration.h
